...
			<EmptyWrapper>
				<EmptyText>{"You don't have any playlists yet"}</EmptyText>
			</EmptyWrapper>
		);
	}
	return (
		<ScrollView testID="addToPlaylistScreen" showsVerticalScrollIndicator={false} style={{ marginTop: 10 }}>
			{keys.map((key, index) => (
				<ListItem
					title={key}
					subtitle={`${playlists[key].length} tracks`}
					onPress={() => onPlaylistPress(key)}
					iconProps={playlistIcon}
...
