...
			tabBarOptions={tabBarOptions}>
			<BottomTabs.Screen
				name="Tracks"
				component={TracksScreen}
				options={{
					tabBarIcon: iconProvider('Tracks'),
					tabBarTestID: 'trackTab'
				}}
			/>
			<BottomTabs.Screen
				name="Search"
				component={SearchScreen}
				options={{ tabBarIcon: iconProvider('Search'), tabBarTestID: 'searchTab' }}
...
